fixed alignement

--- a/assets/scss/_components.scss
+++ b/assets/scss/_components.scss
@@ -261,8 +261,6 @@
   flex: 1;
   
   @include media-breakpoint-up(lg) {
-    justify-content: flex-start;
-    flex-direction: row;
     height: 100%;
   }
   
@@ -273,10 +271,32 @@
   }
 }
 
+.nav-content {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+  
+  @include media-breakpoint-up(lg) {
+    flex-direction: row;
+    height: 100%;
+  }
+  
+  @include media-breakpoint-down(lg) {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
 .search-container {
   display: flex;
   align-items: center;
-  margin-left: map-get($spacers, 3);
+  flex-shrink: 0; // Prevent search from shrinking
+  
+  @include media-breakpoint-up(lg) {
+    margin-left: 20px;
+    height: 100%;
+  }
   
   @include media-breakpoint-down(lg) {
     margin-top: map-get($spacers, 3);
@@ -298,8 +318,9 @@
     opacity: 0;
     flex-direction: row;
     align-items: center;
-    flex: 1;
     height: 100%;
+    flex-wrap: nowrap; // Prevent items from wrapping
+    max-width: calc(100% - 60px); // Leave room for search icon
   }
   
   @include media-breakpoint-down(lg) {
@@ -312,15 +333,12 @@
     align-items: center;
     
     @include media-breakpoint-up(lg) {
-      margin-left: map-get($spacers, 4);
+      margin: 0 map-get($spacers, 2); // Equal spacing on both sides
       height: 100%;
+      white-space: nowrap; // Prevent text from wrapping
       
       &:first-child {
         margin-left: 0;
-      }
-      
-      &.search-item {
-        margin-left: map-get($spacers, 3);
       }
     }
     
